# abdpymc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests.yml
abdpymc/: __init__.py  abd.py  plotting.py  simulation.py  subsample_idata.py  survival.py  test_abd.py  test_simulation.py  test_survival.py  timelines.py
data/cohort_data/: df.csv
hooks/: pre-commit
