[project]
name = "abdpymc"
description = "Antibody dynamics analysis using PyMC"
version = "0.1.0"
authors = [
    { name = "David Pattinson", email = "david.pattinson@wisc.edu" }
]
dependencies = [
    "arviz",
    "matplotlib", 
    "numpy",
    "pandas",
    "pymc",
]

[project.optional-dependencies]
dev = [
    "pytest", "pyflakes", "pycodestyle"
]

